--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -420,15 +420,16 @@ dd {
 }
 
 .span2 h3 {
-    margin-left: 20px;
+    padding-left: 10px;
 }
 
 .span2 li {
-    margin-left: 20px;
+    padding-left: 10px;
 }
 
 .footnudge li {
-    margin-left: 40px;
+    margin-left: 0px;
+    padding-right: 10px;
 }
 
 .footer {
@@ -444,6 +445,8 @@ dd {
     color: #666;
     text-transform: uppercase;
     font-size: 13px;
+    margin-left: 0;
+    padding-right: 10px;
 }
 
 /* Ribbon (on footer)  */
@@ -494,5 +497,16 @@ dd {
     -webkit-transition: color .2s linear;
     -moz-transition: color .2s linear; 
 }
+
+/* Highlighting of sub-menus */
+
+.tree-menu-level-0 .active {
+    font-weight:bold;
+    background: rgba(210,200,180,1);
+    padding-left: 5px;
+    -webkit-border-radius:2px;
+    -moz-border-radius:2px;
+}
+
 
 /* End */
