--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -122,7 +122,7 @@ h6 {
 /* Help acronyms stand out */
 
 acronym {
-    cursor:help;border:0px;
+    cursor:help;border:0;
     background: #dcebe2;
 } 
 
@@ -190,6 +190,7 @@ ol.books li {
 ol.books li:hover { 
     -webkit-transform: scale(1.1); 
     -moz-transform: scale(1.1); 
+    transform: scale(1.1); 
 }
 
 ol.books li.third {
@@ -200,12 +201,12 @@ ol.books li div.book {
     position: relative;
     overflow: hidden;
     border: 1px solid #EEE;
-    border-radius: 10px;
     -webkit-border-radius: 10px 10px;
     -moz-border-radius: 10px 10px;
-    box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+    border-radius: 10px;
     -webkit-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
     -moz-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+    box-shadow: 2px 2px 4px rgba(0,0,0,.3);
 }
 ol.books li div.book a span {
     display: block;
@@ -223,6 +224,7 @@ ol.books li div.book a span {
     border-radius: 0 0 10px 10px;
     -webkit-border-radius: 0 0 10px 10px;
     -moz-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
 }
 ol.books li div.book a span strong {
     display: block;
@@ -244,9 +246,9 @@ ol.books li div.book a span em {
 ol.books li div.book-img img {
     max-width: 100%;
     background-position: 50% 50%;
-    border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 
 .cover img {
@@ -256,12 +258,12 @@ ol.books li div.book-img img {
   overflow: hidden;
   border: 10px solid #e2e1d4;
   background: #e2e1d4;
-  border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
-  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  border-radius: 8px;
   -webkit-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
   -moz-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
 }
 
 /* self-clear floats for book images */
@@ -285,12 +287,12 @@ ol.books li div.book-img img {
   overflow: hidden;
   border: 8px solid #e2e1d4;
   background: #e2e1d4;
-  border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
-  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  border-radius: 8px;
   -webkit-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
   -moz-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
 }
 
 /* Float arbitrary images to the left */
@@ -303,12 +305,12 @@ ol.books li div.book-img img {
   overflow: hidden;
   border: 8px solid #e2e1d4;
   background: #e2e1d4;
-  border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
-  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  border-radius: 8px;
   -webkit-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
   -moz-box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
 }
 
 
@@ -329,7 +331,7 @@ ul.press li.last {
 ul.press li blockquote {
     font-size: 1.2em;
     font-style: italic;
-    line-height 1.5em;
+    line-height: 1.5em;
     border: 0;
 }
 ul.press li blockquote a {
@@ -428,16 +430,16 @@ dd {
 }
 
 .footnudge li {
-    margin-left: 0px;
+    margin-left: 0;
     padding-right: 10px;
 }
 
 .footer {
     background: #262626;
     border: 1px solid #EEE;
-    border-radius: 10px 10px 0 0;
-    -webkit-border-radius: 10px 10px 0 0;
     -moz-border-radius: 10px 10px 0 0;
+    -webkit-border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0;
     padding-bottom: 10px;
 }
 
@@ -490,12 +492,14 @@ dd {
     border:1px solid #ddd;
           -webkit-border-radius:4px;
           -moz-border-radius:4px;
+          border-radius:4px;
 }
 
 .category-list:hover {
     background: rgba(20,120,200,.15);
     -webkit-transition: color .2s linear;
     -moz-transition: color .2s linear; 
+
 }
 
 /* Highlighting of sub-menus */
@@ -506,6 +510,7 @@ dd {
     padding-left: 5px;
     -webkit-border-radius:2px;
     -moz-border-radius:2px;
+    border-radius:2px;
 }
 
 
