--- a/templates/includes/footer_scripts.html
+++ b/templates/includes/footer_scripts.html
@@ -17,16 +17,6 @@ _gaq.unshift(['_setAccount', '{{ settings.GOOGLE_ANALYTICS_ID }}']);
 </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/noisy/1.1/jquery.noisy.min.js"></script>
 
-<script src="{{ STATIC_URL }}js/hyphenator/Hyphenator.js" type="text/javascript"></script>
-  <script type="text/javascript">
-Hyphenator.config({
-    displaytogglebox : false,
-    minwordlength : 4
-    });
-Hyphenator.run();
-</script>
-
-
 <script>
 $('body').noisy({
     intensity: 1,
@@ -47,5 +37,18 @@ $('.footer').noisy({
 
 </script>
 
-
+<!-- Bootstrap -->
+<script src="{{ STATIC_URL }}bootstrap/docs/assets/js/jquery.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-transition.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-scrollspy.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-carousel.js"></script>
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-typeahead.js"></script>
 
