--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@ $(function() {
      <li class="group">
        <div class="book">
           <div class="book-img">
-             <a href="/books/grain-of-truth"><img src="/static/media/uploads/grain_promo.png" title="Grain of Truth" />
+             <a href="/books/grain-of-truth"><img src="/static/media/uploads/grain_promo.jpg" title="Grain of Truth" />
                <span><strong>Grain of Truth</strong></span></a>
 </div><!-- /book -->
 </div><!-- /book-img -->
@@ -104,7 +104,7 @@ $(function() {
     <li class="group">
        <div class="book">
           <div class="book-img">
-             <a href="/books/a-stones-throw"><img src="/static/media/uploads/stone_cover_selection.png" title="A Stone's Throw" />
+             <a href="/books/a-stones-throw"><img src="/static/media/uploads/stone_promo.jpg" title="A Stone's Throw" />
                <span><strong>A Stone's Throw</strong></span></a>
 </div><!-- /book -->
 </div><!-- /book-img -->
@@ -112,7 +112,7 @@ $(function() {
     <li class="group third">
        <div class="book">
           <div class="book-img">
-              <a href="books/labyrinth"><img src="/static/media/uploads/coming_soon_path.png" title="Labyrinth" />
+              <a href="books/labyrinth"><img src="/static/media/uploads/labyrinth_promo.jpg" title="Labyrinth" />
                 <span><strong>Labyrinth</strong></span></a>
 </div><!-- /book -->
 </div><!-- /book-img -->
