--- a/static/css/less/variables.less
+++ b/static/css/less/variables.less
@@ -31,6 +31,7 @@
 @pink:                  #c3325f;
 @purple:                #7a43b6;
 @sand:                  #e8ddc7;
+@cerulean:              #56C4E2;
 
 // Scaffolding
 // -------------------------
@@ -130,8 +131,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
@@ -161,7 +162,7 @@
 @navbarSearchBackgroundFocus:     @white;
 @navbarSearchBorder:              darken(@navbarSearchBackground, 30%);
 @navbarSearchPlaceholderColor:    #ccc;
-@navbarBrandColor:                @navbarLinkColor;
+@navbarBrandColor:                @cerulean;
 
 
 // Hero unit
