--- a/static/css/less/variables.less
+++ b/static/css/less/variables.less
@@ -162,7 +162,7 @@
 @navbarSearchBackgroundFocus:     @white;
 @navbarSearchBorder:              darken(@navbarSearchBackground, 30%);
 @navbarSearchPlaceholderColor:    #ccc;
-@navbarBrandColor:                @cerulean;
+@navbarBrandColor:                @btnInfoBackground;
 
 
 // Hero unit
